<resources>
    <string name="app_name">Android81_MiniProject03</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shop</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_clothing">Clothing</string>
    <string name="menu_frames">Frames</string>
    <string name="menu_gifts">Gifts</string>
    <string name="menu_stationary">Stationary</string>
    <string name="menu_cards">Cards</string>
    <string name="menu_deals">Deals</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>