<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_clothing">

    <fragment
        android:id="@+id/nav_clothing"
        android:name="com.test.android81_miniproject03.ui.ClothingFragment"
        android:label="@string/menu_clothing"
        tools:layout="@layout/fragment_clothing" />
    <fragment
        android:id="@+id/nav_frames"
        android:name="com.test.android81_miniproject03.ui.FramesFragment"
        android:label="@string/menu_frames"
        tools:layout="@layout/fragment_frames" />
    <fragment
        android:id="@+id/nav_gifts"
        android:name="com.test.android81_miniproject03.ui.GiftsFragment"
        android:label="@string/menu_gifts"
        tools:layout="@layout/fragment_gifts" />
    <fragment
        android:id="@+id/nav_stationary"
        android:name="com.test.android81_miniproject03.ui.StationaryFragment"
        android:label="@string/menu_stationary"
        tools:layout="@layout/fragment_stationary" />
    <fragment
        android:id="@+id/nav_cards"
        android:name="com.test.android81_miniproject03.ui.CardsFragment"
        android:label="@string/menu_cards"
        tools:layout="@layout/fragment_cards" />
    <fragment
        android:id="@+id/nav_deals"
        android:name="com.test.android81_miniproject03.ui.DealsFragment"
        android:label="@string/menu_deals"
        tools:layout="@layout/fragment_deals" />
</navigation>